<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grp17.dalassist.Assist.uploadimage">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_270sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:contentDescription="@string/new_upload"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/images" />

    <EditText
        android:id="@+id/image_description"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_above="@+id/button_upload"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="@dimen/_6sdp" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#b2dfdb"
        android:ellipsize="marquee"
        android:text="@string/upload"
        android:textColor="#000" />
</RelativeLayout>
