<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="com.grp17.dalassist.MyAccount.MyAccountActivity"
    android:background="@color/colorBlack">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:src="@drawable/dal_logo" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/colorWhite"
        android:focusable="true"
        android:hint="@string/Enter_Name"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"/>

    <CheckBox
        android:id="@+id/ch_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorWhite"
        android:text="Remember me"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        />
    <!--[19][21]-->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Forgot_Password"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/defaultCredentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Default Username and Password is staff and staff"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"/>

</LinearLayout>
